--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json"
   },
@@ -17,7 +18,7 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.3.2",
-    "babel-cli": "6.24.1",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "enzyme": "^3.11.0",
