--- a/package.json
+++ b/package.json
@@ -5,26 +5,26 @@
   "author": "Kyle Ferry",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
-    "build:dev": "webpack",
-    "build:prod": "webpack -p --env production",
-    "dev-server": "webpack-dev-server",
+    "dev": "webpack serve",
+    "build": "webpack",
     "test": "jest --config=jest.config.json"
   },
   "dependencies": {
-    "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/preset-react": "^7.12.7",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.3.2",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.1",
+    "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
     "live-server": "^1.2.1",
+    "mini-css-extract-plugin": "^1.3.3",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "normalize.css": "^8.0.1",
@@ -42,13 +42,13 @@
     "style-loader": "^2.0.0",
     "uuid": "^8.3.1",
     "validator": "^13.1.17",
-    "webpack": "^5.5.1",
+    "webpack": "^5.11.1",
     "webpack-dev-server": "^3.11.0",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@types/react-dates": "^21.8.1",
     "babel-jest": "^26.6.3",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.3.1"
   }
 }
