--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "dev": "webpack serve",
     "build": "webpack",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "start": "node server/server.js",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.12.1",
@@ -21,6 +23,7 @@
     "css-loader": "^5.0.1",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.1",
+    "express": "^4.17.1",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
     "live-server": "^1.2.1",
