--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "webpack serve",
     "build": "webpack",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build"
   },
@@ -21,7 +21,9 @@
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase": "^8.2.1",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.3",
     "moment": "^2.29.1",
@@ -37,6 +39,8 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "uuid": "^8.3.1",
@@ -47,6 +51,7 @@
   "devDependencies": {
     "@types/react-dates": "^21.8.1",
     "babel-jest": "^26.6.3",
+    "cross-env": "^7.0.3",
     "jest": "^26.6.3",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.1",
