--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "file-loader": "^6.2.0",
     "firebase": "^8.2.1",
     "history": "^4.10.1",
     "html-webpack-plugin": "^4.5.0",
@@ -44,6 +45,7 @@
     "redux-thunk": "^2.3.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "uuid": "^8.3.1",
     "validator": "^13.1.17",
     "webpack": "^5.11.1",
