--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.3.2",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.2",
+    "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "dotenv": "^8.2.0",
