--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.32.4",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.1",
     "validator": "^13.1.17",
     "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.1",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
@@ -60,7 +62,6 @@
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.1",
     "react-test-renderer": "^17.0.1",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-cli": "^4.3.1"
+    "webpack-dev-server": "^3.11.0"
   }
 }
